force-app/main/default/objects/candidate__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>candidates</relationshipLabel>
    <relationshipName>candidates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>