force-app/main/default/objects/candidate__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>mumbai</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
            <value>
                <fullName>warangal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>