force-app/main/default/objects/candidate__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 days</fullName>
            </value>
            <value>
                <fullName>20 days</fullName>
            </value>
            <value>
                <fullName>1 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>