force-app/main/default/objects/candidate__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <label>PAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>